# TurboTrash

./: LICENSE  README.md
.github/: renovate.json
.github/workflows/: deploy-docs.yml  test.yml
garbage-classification-model/: .gitignore  dataset.py  model.py  requirements.txt  test.py  train.py
garbage-classification-web/: .gitignore  app.vue  build-wasm.sh  bun.lockb  nuxt.config.ts  package.json
garbage-classification-web/assets/: coords.json
garbage-classification-web/classification-model/: .gitignore  Cargo.toml  build.rs
garbage-classification-web/classification-model/model/: Cargo.toml
garbage-classification-web/classification-model/model/src/: lib.rs
garbage-classification-web/classification-model/pytorch-ckpt/2040-77/: best_model_half.pth
garbage-classification-web/classification-model/pytorch-ckpt/2050-76/: best_model_half.pth
garbage-classification-web/classification-model/src/: lib.rs  web.rs
garbage-classification-web/pages/: index.vue  map.vue
