[package]
name = "classification-model"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
model = { path = "./model" }
burn = { version = "0.19.0", default-features = false, features = ["ndarray"] }

# # Wasm dependencies
serde = "1.0.213"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.77"
wasm-bindgen-test = "0.3.50"
wasm-logger = "0.2.0"
log = "0.4.22"

[build-dependencies]
model = { path = "./model" }
burn = { version = "0.19.0", default-features = false, features = ["ndarray"] }
burn-import = { version = "0.16.0", default-features = false, features = [
    "pytorch",
] }
